新增与优化日志总结
1. 主题系统重构
   新增亮色/暗色双模式支持，自动跟随系统设置。采用CSS变量管理配色，精简主题切换逻辑，优化视觉一致性。

2. 极简设计深化
   移除冗余边框与阴影，统一圆角为10px/6px/14px。输入框改为填充色风格，背景色与主题统一。调整body底色增强层级区分。

3. 消息气泡重构
   密文行与内容气泡合并为视觉统一容器，仅保留外层圆角。左侧显示"解密于时间"，右侧调整为"密文+时间+复制"顺序。移除内部标签文案，简化信息展示。

4. 交互体验优化
   输入框激活边框改为中性色。解密按钮智能切换"剪切板/输入框"文案。密文区域支持整体点击复制，悬停提示+触屏文案双适配。

5. 移动端专项调整
   压缩输入框与按钮间距至8px。标题栏固定顶部，优化小屏圆角处理。保持5:5按钮布局，确保触控区域不小于48px。

6. 视觉元素精简
   替换emoji为Bootstrap填充图标。按钮配色呼应气泡主题（左白右蓝）。时间信息融入密文行，移除所有次级标签文本。

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.13.1",
     "preact": "^10.19.3"
   },
   "devDependencies": {
@@ -18,4 +19,4 @@
     "vite": "^5.0.8"
   },
   "type": "module"
-} 
+}
