--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.13.1",
+    "lz-string": "^1.5.0",
     "preact": "^10.19.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
     "@types/node": "^20.10.5",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   },
